# python-cli

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
tests/: test_main.py
